--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
   testImplementation "com.google.truth:truth:1.1.3"
   testImplementation "io.mockk:mockk:1.13.2"
+  testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
 }
